# dumbpy

./: LICENSE  README.md  pyproject.toml
dumbpy/: __init__.py
